# robot_faces

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: Parameters.cfg
cmake/: FindSFML.cmake
include/robot_faces/: consts.hpp  face-config.hpp  face.hpp  utils.hpp
include/robot_faces/entities/: entity.hpp  ientity.hpp  proxy-entity.hpp  squircle-entity.hpp  vertex-entity.hpp
include/robot_faces/eyes/: iris.hpp  pupil.hpp
include/robot_faces/mouth/: fill-mouth.hpp  line-mouth.hpp  mouth.hpp  squircle-mouth.hpp
include/robot_faces/nose/: annulus-nose.hpp  curve-nose.hpp  nose.hpp  squircle-nose.hpp
include/robot_faces/shapes/: bezierline.hpp  squircle-shape.hpp
launch/: robot_face.launch
res/eyebrow/: arc.txt  arch.txt  rectangle.txt  rounded.txt  square.txt  straight.txt
res/iris/: almond.txt  arc.txt  oval.txt  thick.txt
res/mouth/: angry.txt  happy.txt  neutral.txt  sad.txt  scared.txt  shocked.txt
res/nose/: animal.txt
src/: robot_faces_node.cpp
srv/: Expression.srv  Gaze.srv  Speaking.srv
